--- a/i18n/all.json
+++ b/i18n/all.json
@@ -32,7 +32,8 @@
     "P": "ⓅＰṔṖƤⱣꝐꝒꝔ",
     "Q": "ⓆＱꝖꝘɊ",
     "R": "ⓇＲŔṘŘȐȒṚṜŖṞɌⱤꝚꞦꞂ",
-    "S": "ⓈＳẞŚṤŜṠŠṦṢṨȘŞⱾꞨꞄ",
+    "S": "ⓈＳŚṤŜṠŠṦṢṨȘŞⱾꞨꞄ",
+    "SS": "ẞ",
     "T": "ⓉＴṪŤṬȚŢṰṮŦƬƮȾꞆ",
     "TZ": "Ꜩ",
     "U": "ⓊＵÙÚÛŨṸŪṺŬÜǛǗǕǙỦŮŰǓȔȖƯỪỨỮỬỰỤṲŲṶṴɄ",
@@ -73,7 +74,8 @@
     "p": "ⓟｐṕṗƥᵽꝑꝓꝕ",
     "q": "ⓠｑɋꝗꝙ",
     "r": "ⓡｒŕṙřȑȓṛṝŗṟɍɽꝛꞧꞃ",
-    "s": "ⓢｓßśṥŝṡšṧṣṩșşȿꞩꞅẛ",
+    "s": "ⓢｓśṥŝṡšṧṣṩșşȿꞩꞅẛ",
+    "ss": "ß",
     "t": "ⓣｔṫẗťṭțţṱṯŧƭʈⱦꞇ",
     "tz": "ꜩ",
     "u": "ⓤｕùúûũṹūṻŭüǜǘǖǚủůűǔȕȗưừứữửựụṳųṷṵʉ",
