--- a/i18n/fo.json
+++ b/i18n/fo.json
@@ -1,9 +1,13 @@
 {
-    "a": "á",
+    "a": "áå",
+    "c": "ć",
     "d": "ð",
+    "e": "é",
     "i": "í",
-    "o": "óø",
-    "u": "ú",
+    "l": "ł",
+    "o": "óøö",
+    "s": "š",
+    "u": "úü",
     "y": "ý",
     "ae": "æ"
 }
