--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -1,9 +1,8 @@
 {
-    "a": "áà",
+    "a": "áâãà",
     "c": "ç",
     "e": "éê",
     "i": "í",
-    "n": "ñ",
-    "o": "ó",
+    "o": "óôõ",
     "u": "ú"
 }
