--- a/i18n/sv.json
+++ b/i18n/sv.json
@@ -1,4 +1,9 @@
 {
-    "a": "åä",
-    "o": "ö"
+    "a": "åäá",
+    "e": "é",
+    "i": "í",
+    "o": "öó",
+    "s": "š",
+    "u": "úü",
+    "z": "ž"
 }
